[project]
name = "llama3-finetuning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mojtaba Yousefi", email = "mojtaba.yousefi@live.com" }
]
dependencies = [
    "mlx>=0.11.1",
    "numpy>=1.26.4",
    "mlx-lm>=0.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llama3_finetuning"]
